force-app/main/default/objects/Talc__c/fields/Pre_cancer_Provider_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Pre_cancer_Provider_1_Name__c</fullName>
    <label>Pre-cancer Provider 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>