force-app/main/default/objects/Talc__c/fields/Pre_cancer_Provider_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Pre_cancer_Provider_3_Name__c</fullName>
    <label>Pre-cancer Provider 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>