force-app/main/default/objects/Talc__c/fields/Previously_represented_by_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Previously_represented_by_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were you previously represented by an attorney in this case?</description>
    <inlineHelpText>Were you previously represented by an attorney in this case?</inlineHelpText>
    <label>Previously represented by Attorney?</label>
    <type>Checkbox</type>
</CustomField>