force-app/main/default/objects/Talc__c/fields/Primary_peritoneal_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_peritoneal_cancer_Address__c</fullName>
    <label>Primary peritoneal cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>