force-app/main/default/objects/Talc__c/fields/Product_Application_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Product_Application_Frequency__c</fullName>
    <description>How often did they apply this product?</description>
    <inlineHelpText>How often did they apply this product?</inlineHelpText>
    <label>Product Application Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A few times a year (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>