force-app/main/default/objects/Talc__c/fields/Product_Usage_Before_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Before_Diagnosis__c</fullName>
    <inlineHelpText>How long did you use Johnsons Baby powder or Shower to Shower in your genital  area before you were diagnosed?</inlineHelpText>
    <label>Product Usage Before Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At least 4 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>