force-app/main/default/objects/Talc__c/fields/Provider_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_1_Name__c</fullName>
    <description>Name of Primary Care Physician, Oncologist or ObGyn? (Prov 1)</description>
    <label>Provider 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>