force-app/main/default/objects/Talc__c/fields/Provider_1_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Provider_1_Specialty__c</fullName>
    <description>What is their area of practice or specialty? (Prov 1)</description>
    <label>Provider 1 Specialty</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>