force-app/main/default/objects/Talc__c/fields/Provider_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_2_Name__c</fullName>
    <label>Provider 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>