force-app/main/default/objects/Talc__c/fields/Provider_3_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Provider_3_Specialty__c</fullName>
    <label>Provider 3 Specialty</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>