force-app/main/default/objects/Talc__c/fields/Reason_for_Not_Receiving_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Not_Receiving_Treatment__c</fullName>
    <label>Reason for Not Receiving Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recent diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>