force-app/main/default/objects/Talc__c/fields/Reason_for_Release__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Release__c</fullName>
    <label>Reason for Release</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>