force-app/main/default/objects/Talc__c/fields/Reason_For_Seeing_PC_Prov_1__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Seeing_PC_Prov_1__c</fullName>
    <label>Reason For Seeing - PC Prov 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>