force-app/main/default/objects/Talc__c/fields/Received_email_or_letter__c.field-meta.xml
<CustomField>
    <fullName>Received_email_or_letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please confirm that you received an email or letter in which your former lawyer acknowledged that they no longer represent you. I will need a copy of that email/letter uploaded at the end of this conversation in order for our firm to represent you. Will you be able to provide that?</description>
    <inlineHelpText>Please confirm that you received an email or letter in which your former lawyer acknowledged that they no longer represent you. I will need a copy of that email/letter uploaded at the end of this conversation in order for our firm to represent you. Will you be able to provide that?</inlineHelpText>
    <label>Received an email or letter?</label>
    <type>Checkbox</type>
</CustomField>