force-app/main/default/objects/Talc__c/fields/Rel_3_Full_Name_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Rel_3_Full_Name_Cancer__c</fullName>
    <label>Rel 3 Full Name - Cancer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>