force-app/main/default/objects/Talc__c/fields/Relationship_to_Rel_1_BRCA__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Rel_1_BRCA__c</fullName>
    <label>Relationship to Rel 1 - BRCA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>