force-app/main/default/objects/Talc__c/fields/Relationship_to_Rel_2__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Rel_2__c</fullName>
    <label>Relationship to Rel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>