force-app/main/default/objects/Talc__c/fields/Release_Preference__c.field-meta.xml
<CustomField>
    <fullName>Release_Preference__c</fullName>
    <inlineHelpText>Do you want to be released?</inlineHelpText>
    <label>Release Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>