force-app/main/default/objects/Talc__c/fields/Represented_by_a_lawyer__c.field-meta.xml
<CustomField>
    <fullName>Represented_by_a_lawyer__c</fullName>
    <description>The next important thing we need to know is if you are currently represented by another lawyer in connection with this case. If you are, we are not allowed to talk to you. Additionally, having multiple lawyers will cause issues for you during the claim process. Are you currently represented by a lawyer in connection with your use of talcum powder?</description>
    <inlineHelpText>The next important thing we need to know is if you are currently represented by another lawyer in connection with this case. If you are, we are not allowed to talk to you. Additionally, having multiple lawyers will cause issues for you during the claim process. Are you currently represented by a lawyer in connection with your use of talcum powder?</inlineHelpText>
    <label>Represented by a lawyer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure (DNQ)</fullName>
            </value>
            <value>
                <fullName>Previously had an attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>