force-app/main/default/objects/Talc__c/fields/Represented_By_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Represented_By_Law_Firm__c</fullName>
    <label>Represented By Law Firm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>