force-app/main/default/objects/Talc__c/fields/Routinely_Applied_Baby_Powder__c.field-meta.xml
<CustomField>
    <fullName>Routinely_Applied_Baby_Powder__c</fullName>
    <label>Routinely Applied Baby Powder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MORE THAN 4 YEARS OF ROUTINE USE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>