force-app/main/default/objects/Talc__c/fields/Show_medical_professional_proof__c.field-meta.xml
<CustomField>
    <fullName>Show_medical_professional_proof__c</fullName>
    <label>Show medical professional proof</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>