force-app/main/default/objects/Talc__c/fields/Signed_documents__c.field-meta.xml
<CustomField>
    <fullName>Signed_documents__c</fullName>
    <label>Signed documents:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>