force-app/main/default/objects/Talc__c/fields/Signer_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Signer_Date_of_Birth__c</fullName>
    <label>Signer Date of Birth</label>
    <type>Date</type>
</CustomField>