force-app/main/default/objects/Talc__c/fields/Talcum_products_you_used__c.field-meta.xml
<CustomField>
    <fullName>Talcum_products_you_used__c</fullName>
    <label>Talcum products you used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>