force-app/main/default/objects/Talc__c/fields/Tested_for_the_BRCA1_or_BRCA2_mutation__c.field-meta.xml
<CustomField>
    <fullName>Tested_for_the_BRCA1_or_BRCA2_mutation__c</fullName>
    <description>tested for the BRCA1 or BRCA2 mutation?</description>
    <label>Tested for the BRCA1 or BRCA2 mutation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>