force-app/main/default/objects/Talc__c/fields/Testing_Facility_Address_OCT__c.field-meta.xml
<CustomField>
    <fullName>Testing_Facility_Address_OCT__c</fullName>
    <label>Testing Facility Address (OCT)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>