force-app/main/default/objects/Talc__c/fields/Time_of_Connection_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Connection_Awareness__c</fullName>
    <inlineHelpText>When did you learn of this connection?</inlineHelpText>
    <label>Time of Connection Awareness</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>