force-app/main/default/objects/Talc__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>