force-app/main/default/objects/Talc__c/fields/Type_of_Cancer_Rel_1__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cancer_Rel_1__c</fullName>
    <label>Type of Cancer - Rel 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Ovarian Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>