force-app/main/default/objects/Talc__c/fields/Type_of_documentation_you_have__c.field-meta.xml
<CustomField>
    <fullName>Type_of_documentation_you_have__c</fullName>
    <label>Type of documentation you have</label>
    <length>255</length>
    <type>Text</type>
</CustomField>