force-app/main/default/objects/Talc__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>