force-app/main/default/objects/Talc__c/fields/Used_Johnson_Johnson_Shower__c.field-meta.xml
<CustomField>
    <fullName>Used_Johnson_Johnson_Shower__c</fullName>
    <label>Used Johnson &amp; Johnson Shower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>