force-app/main/default/objects/Talc__c/fields/Used_Other_Cosmetic_Powder_Products__c.field-meta.xml
<CustomField>
    <fullName>Used_Other_Cosmetic_Powder_Products__c</fullName>
    <label>Used Other Cosmetic Powder Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>