force-app/main/default/objects/Talc__c/fields/Uterine_fibroid_Address__c.field-meta.xml
<CustomField>
    <fullName>Uterine_fibroid_Address__c</fullName>
    <label>Uterine fibroid (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>