force-app/main/default/objects/Talc__c/fields/Vaginal_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Vaginal_cancer_Address__c</fullName>
    <label>Vaginal cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>