force-app/main/default/objects/Talc__c/fields/Vulvar_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Vulvar_cancer_Address__c</fullName>
    <label>Vulvar cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>