force-app/main/default/objects/Talc__c/fields/Was_the_diagnosis_before_or_after_2000__c.field-meta.xml
<CustomField>
    <fullName>Was_the_diagnosis_before_or_after_2000__c</fullName>
    <label>Was the diagnosis before or after 2000</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>