force-app/main/default/objects/Talc__c/fields/What_is_your_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_Email_Address__c</fullName>
    <description>What is your Email Address?</description>
    <externalId>true</externalId>
    <label>What is your Email Address?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>