force-app/main/default/objects/Talc__c/fields/What_monthyear_were_you_exposed__c.field-meta.xml
<CustomField>
    <fullName>What_monthyear_were_you_exposed__c</fullName>
    <label>What month\year were you exposed</label>
    <type>Date</type>
</CustomField>