force-app/main/default/objects/Talc__c/fields/Where_did_you_apply_product__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_apply_product__c</fullName>
    <label>Where did you apply product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>