force-app/main/default/objects/Talc__c/fields/Willing_to_share_information__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_share_information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>You will need to communicate by phone, email, and text message with our case managers throughout this process. You will need to share with our law firm, confidentially, medical records, health information, and any medical liens you have. Are you willing to do this?*</description>
    <inlineHelpText>You will need to communicate by phone, email, and text message with our case managers throughout this process. You will need to share with our law firm, confidentially, medical records, health information, and any medical liens you have. Are you willing to do this?*</inlineHelpText>
    <label>Willing to share information?</label>
    <type>Checkbox</type>
</CustomField>