force-app/main/default/objects/Talc__c/fields/Workplace_Exposure_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Exposure_Month_Year__c</fullName>
    <description>What month and year were you exposed to Cyprus and/or Imerys Industrial Talcum Powder?</description>
    <inlineHelpText>What month and year were you exposed to Cyprus and/or Imerys Industrial Talcum Powder?</inlineHelpText>
    <label>Workplace Exposure Month and Year</label>
    <type>Date</type>
</CustomField>