force-app/main/default/objects/Talc__c/fields/Write_any_additional_comment__c.field-meta.xml
<CustomField>
    <fullName>Write_any_additional_comment__c</fullName>
    <label>Write any additional comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>