force-app/main/default/objects/Talc__c/fields/Year_you_were_diagnosed_with_cancer__c.field-meta.xml
<CustomField>
    <fullName>Year_you_were_diagnosed_with_cancer__c</fullName>
    <description>What year were you diagnosed with cancer after using Talcum Powder?</description>
    <inlineHelpText>What year were you diagnosed with cancer after using Talcum Powder?</inlineHelpText>
    <label>Year you were diagnosed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>