force-app/main/default/objects/Talc__c/fields/Your_current_address__c.field-meta.xml
<CustomField>
    <fullName>Your_current_address__c</fullName>
    <label>Your current address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>