force-app/main/default/objects/Talc__c/fields/Your_Current_Address_Address2__c.field-meta.xml
<CustomField>
    <fullName>Your_Current_Address_Address2__c</fullName>
    <label>Your Current Address - Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>