force-app/main/default/objects/Talc__c/fields/Your_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Your_Date_of_Birth__c</fullName>
    <description>What is your Date of Birth? (If older than 80, DQ)</description>
    <inlineHelpText>)</inlineHelpText>
    <label>Your Date of Birth</label>
    <type>Date</type>
</CustomField>