force-app/main/default/objects/Talc__c/fields/Your_Gender__c.field-meta.xml
<CustomField>
    <fullName>Your_Gender__c</fullName>
    <label>Your Gender?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>