force-app/main/default/objects/Talc__c/fields/Your_Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Your_Preferred_Pronouns__c</fullName>
    <description>What are your preferred pronouns? *</description>
    <inlineHelpText>What are your preferred pronouns? *</inlineHelpText>
    <label>Your Preferred Pronouns?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>