force-app/main/default/objects/Talc__c/fields/Your_relation_to_the_injured__c.field-meta.xml
<CustomField>
    <fullName>Your_relation_to_the_injured__c</fullName>
    <label>Your relation to the injured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>