force-app/main/default/objects/Talc__c/recordTypes/Saddle_Rock.recordType-meta.xml
<RecordType>
    <fullName>Saddle_Rock</fullName>
    <active>true</active>
    <label>Saddle Rock</label>
</RecordType>