force-app/main/default/objects/Talc__c/recordTypes/Version_1.recordType-meta.xml
<RecordType>
    <fullName>Version_1</fullName>
    <active>true</active>
    <description>Watts Guerra Talc</description>
    <label>Version 1</label>
</RecordType>