force-app/main/default/objects/Talc__c/recordTypes/Version_2.recordType-meta.xml
<RecordType>
    <fullName>Version_2</fullName>
    <active>true</active>
    <description>Watts Guerra Talc Questionnaire V2-FINAL</description>
    <label>Version 2</label>
</RecordType>